--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,10 @@
 			<version>1.5.4</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>2.5.6</version>
+		</dependency>
 	</dependencies>
 </project>
